src/testsuite/single/tests/compiler/fail/class_redef.c
class foo {
    int x;
}

class foo {
    string y;
}
